# cca-exhibitions-flicker-archive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.gcs-direct.yml  docker-compose.local-cantaloupe.yml  docker-compose.local-optimized.yml  nginx.conf  pyproject.toml
cloudbuild/: deploy-cantaloupe.yaml  deploy-frontend-cantaloupe.yaml  deploy-frontend-gcs-direct.yaml  update-pipeline-job.yaml
docs/: deployment.md  pipeline-guide.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/scripts/: generate-thumbs.ts
frontend/src/components/: EntryPoints.astro  ExhibitionCard.astro  FilterBar.astro  HeroCarousel.astro  MetadataTable.astro  PhotoCard.astro  PhotoGrid.astro  RecentStrip.astro  TimelineGalleryCard.astro  TimelineNav.astro  TimelineYear.astro
frontend/src/layouts/: Base.astro  Immersive.astro
frontend/src/lib/: data.ts
frontend/src/pages/: index.astro  menu.astro  search.astro  slideshow.astro  timeline.astro
frontend/src/pages/albums/: [slug].astro
frontend/src/pages/data/: [slug].json.ts
frontend/src/styles/: global.css
research/: explore_albums.py  explore_api.py  explore_descriptions.py
src/cca_archive/: __init__.py  config.py  csv_export.py  downloader.py  flickr_client.py  gcs_uploader.py  ia_uploader.py  image_optimizer.py  llm.py  manifest.py  models.py  pipeline.py  tiff_converter.py
tests/: test_csv_export.py  test_downloader.py  test_flickr_client.py  test_image_optimizer.py  test_manifest.py  test_models.py
