[project]
name = "cca-archive"
version = "0.1.0"
description = "Archive CCA Exhibitions Flickr account — extract metadata via LLM, download images, export CSV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flickrapi>=2.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.1",
    "httpx>=0.27",
    "rich>=13.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
cca-archive = "cca_archive.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cca_archive"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
